den1-k8s01/warehouse20/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  name: sonarr
  namespace: warehouse20
  annotations:
    fluxcd.io/tag.exportarr: 'semver: > 0.3.0'
    # figure out how to disable updates on sonarr or find a new
    # fluxcd.io/tag.exporter: semver:~v0.1
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.sonarr: glob:version-3.*
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: sonarr
        # Preview tag is for the latest v3
        image: linuxserver/sonarr:version-3.0.6.1196
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /mnt/media/store01
          name: media
      - name: exportarr
        image: onedr0p/exportarr:v0.3.4
        command: ["exportarr"]
        args: ["sonarr"]
        ports:
        - name: monitoring
          containerPort: 9707
        livenessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          failureThreshold: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-data
      - name: media
        persistentVolumeClaim:
          claimName: media-store01
