den1-k8s01/warehouse20/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: warehouse20
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  ports:
    - name: http
      targetPort: http
      port: 8989
      protocol: TCP
    - name: monitoring
      targetPort: monitoring
      port: 9707
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
